# Performance

./: .gitignore  CMakeLists.txt
CUDA/: CMakeLists.txt  allocator.cu  arr.cu  atomic.cu  atomicCAS.cu  filter.cu  hello.cu  id.cu  math.cu  matrix.cu  mem.cu  saxpy.cu  sum.cu  template.cu  thrust.cu  unmem.cu
CUDA/include/: helper_cuda.h  helper_string.h
CUDA_PROJECT/: CMakeLists.txt  cudaArray.cuh  cudaSurface.cuh  cudaTexture.cuh
CUDA_PROJECT/include/: CudaAllocator.h  helper_cuda.h  tick.h
RALL_STL_PTR/: 1.cc  2.cc  CMakeLists.txt  constructor.cc  format.cc  ranges.cc  shared_ptr.cc  unique_ptr.cc  weak_ptr.cc
STD/: iterator.cc  set.cc  string.cc  vector.cc
TBB/: CMakeLists.txt  concurrent.cc  fortest.cc  parallelfor.cc  parallelreduce.cc  parallelscan.cc  parallelsort.cc  taskarena.cc  tbb.cc
TEMPLATE/: 1.cc  CMakeLists.txt  auto.cc  constexpr.cc  decltype.cc  lambda_functional.cc  optional.cc  sumto.cc  template1.cc  template2.cc  template3.cc  tuple.cc  variant.cc
THREAD/: CMakeLists.txt  MTQueue.hpp  async.cc  mutex.cc  producer.cc  promise.cc  thread.cc  time.cc  variable.cc
